hud snapping
(cherry picked from commit ecb3bd28d61048e97c2e73507d1a2b4e1a0f1b63)